--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <title>لجنـــــ.تك —Lagne.tk</title>
 
- <script src="jquery.js">
-<! <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+<! <script src="jquery.js">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
 </script>
 </head>
 <body bgcolor="black" background="black">
@@ -196,9 +196,11 @@ function zoom()
 		if(index==4)
 			setTimeout('location.href="http://lagnetk.googlecode.com";',1000);
 		else if(index==5)
-			setTimeout('location.href="http://github.com/yoga1290";',1000);
+			setTimeout('location.href="https://github.com/yoga1290/lagne.tk";',1000);
 		else if(index==1)
 			setTimeout('location.href="http://about.me/yoga1290";',1000);
+                else if(index==2)
+ 			setTimeout('location.href="http://lagnetk.googlecode.com/files/Elections.apk";',1000);         
 		
 	}
 }
