--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@ var	context,
 	zoomFactor=1, //zooming Factor
 	index=0, // index of node being zoomed
 	done=1, // flag, 1 if done with zooming
-	speed=1; 
+	speed=1,
+	initialMousePressX=0,
+	initialMousePressY=0,
+	isMousePressed=false; 
 
 // each element of (node) will be sub-array
 // each sub-array will contain
@@ -193,9 +196,9 @@ function zoom()
 	else
 	{
 		done=1;
-		if(index==4)
+		if(index==5)
 			setTimeout('location.href="http://lagnetk.googlecode.com";',1000);
-		else if(index==5)
+		else if(index==4)
 			setTimeout('location.href="https://github.com/yoga1290/lagne.tk";',1000);
 		else if(index==1)
 			setTimeout('location.href="http://about.me/yoga1290";',1000);
@@ -225,17 +228,6 @@ function getSelectedIndex(x,y)
 	}
 	return	-1;
 }
-/*
-function testAnimation(i,j)
-{
-	if(done==1 && i<j)
-		zoom(i,j);
-	if(i+1<node.length && i<j)
-		setTimeout("testAnimation("+(i+1)+","+j+");",500);
-	if(i+1<node.length && i==j &&j+1<node.length)
-		setTimeout("testAnimation("+(0)+","+(j+1)+");",2000);
-}
-*/
 function main()
 {
 	canvas = document.getElementById("canvas");
@@ -247,14 +239,33 @@ function main()
 	canvas.height=$(window).height();
 	init();
 	draw();
-//	draw(-200,-200,2);
+
 	done=0;
 	index=0;
 	zoom();
-//	testAnimation(0,0);
 
 	//Events Listeners:
 	$(document).mousedown(function(e){
+			initialMousePressX=e.pageX;
+			initialMousePressY=e.pageY;
+			isMousePressed=true;
+		});
+
+	$(document).mousemove(function(e){
+
+			if(!isMousePressed) return;
+			//Drag the whole Canvas, while moving the mouse & keep pressing
+			shiftX+=(e.pageX-initialMousePressX)/100;
+			shiftY+=(e.pageY-initialMousePressY)/100;
+			draw();
+		});
+
+	$(document).mouseup(function(e){
+			isMousePressed=false;
+
+			if(e.pageX!=initialMousePressX	&&	e.pageY!=initialMousePressY)
+					return;
+
 			var i=getSelectedIndex(e.pageX,e.pageY);
 			if(i!=-1)
 			{
@@ -262,6 +273,8 @@ function main()
 				zoom();
 			}
 		});
+
+
 	$(window).resize(function(){
 		canvas.width=$(window).width();
 		canvas.height=$(window).height();
